--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "asana-vscode-tooltip",
   "displayName": "Asana task tooltips",
   "description": "Preview Asana task details when you hover over an Asana link",
-  "version": "0.0.1",
+  "icon": "assets/images/asana_tooltip_icon.png",
+  "version": "0.0.2",
   "publisher": "junellacaringal",
   "engines": {
     "vscode": "^1.87.0"
